# demoPython-bdd

./: README.md  __init__.py  conftest.py  pyproject.toml  pytest.ini  setup.sh
.github/workflows/: ci.yml
core/api/: weather.py
core/utils/: docker_cmd.py  restapi.py
tests/features/: docker.feature
tests/steps/: test_docker.py
